Stemcell RN Bot automatically updating stemcell-releases.json

--- a/stemcell-rn-bot/stemcell-releases.json
+++ b/stemcell-rn-bot/stemcell-releases.json
@@ -1,1 +1,1 @@
-[]
+[[["name","Stemcell 3468.13"],["published_at","2017-12-08 22:22:32 UTC"],["body","- Bump Ubuntu Trusty stemcell USN-3509-2: Linux kernel (Xenial HWE) vulnerabilities"]]]
